initial default use case addition
Signed-off-by: Amit Galitzky <amgalitz@amazon.com>